--- a/css/styles.css
+++ b/css/styles.css
@@ -253,6 +253,9 @@ p code{
 .icon-TypeScript{
     background-image:url(../svg/typescript.svg)
 }
+.icon-PowerBi{
+    background-image:url(../svg/powerbi.svg)
+}
 .icon-Solana{
     background-image:url(solana.767bd52e.svg)
 }
